--- a/ApexParser/ApexParser.csproj
+++ b/ApexParser/ApexParser.csproj
@@ -36,9 +36,8 @@
     <StartupObject>ApexParser.Program</StartupObject>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="Newtonsoft.Json, Version=10.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
-      <HintPath>..\packages\Newtonsoft.Json.10.0.3\lib\net45\Newtonsoft.Json.dll</HintPath>
-      <Private>True</Private>
+    <Reference Include="Sprache, Version=2.1.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\Sprache.2.1.0\lib\net40\Sprache.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
@@ -62,11 +61,20 @@
     <Compile Include="MetaClass\MethodSyntax.cs" />
     <Compile Include="MetaClass\SyntaxBase.cs" />
     <Compile Include="MetaClass\SyntaxType.cs" />
+    <Compile Include="ParserAst\ClassDeclaration.cs" />
+    <Compile Include="ParserAst\MethodDeclaration.cs" />
+    <Compile Include="ParserAst\MethodParameters.cs" />
+    <Compile Include="ParserAst\ParameterDeclaration.cs" />
+    <Compile Include="Parser\ApexGrammar.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Visitors\ApexCodeGenerator.cs" />
+    <Compile Include="Visitors\BaseVisitor.cs" />
+    <Compile Include="Visitors\VisualBasicCodeGenerator.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
+    <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="ApexCode\MethodsOne.txt" />
