--- a/ApexParserTest/ApexParserTest.csproj
+++ b/ApexParserTest/ApexParserTest.csproj
@@ -70,6 +70,7 @@
     <Compile Include="Lexer\LexerTestData.cs" />
     <Compile Include="Lexer\LexerTestElement.cs" />
     <Compile Include="Parser\ApexGrammarTests.cs" />
+    <Compile Include="Parser\MethodTestData.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Visitors\ApexVisitorTests.cs" />
     <Compile Include="Visitors\VisualBasicVisitorTests.cs" />
