--- a/ApexParserTest/ApexParserTest.csproj
+++ b/ApexParserTest/ApexParserTest.csproj
@@ -55,12 +55,18 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Parser\ApexResourceTests.cs" />
     <Compile Include="Lexer\LexerTest.cs" />
     <Compile Include="Lexer\LexerTestData.cs" />
     <Compile Include="Lexer\LexerTestElement.cs" />
     <Compile Include="Parser\ApexGrammarTests.cs" />
     <Compile Include="Parser\MethodTestData.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Properties\Resources.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>Resources.resx</DependentUpon>
+    </Compile>
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
@@ -77,6 +83,16 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Visitors\" />
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Properties\Resources.resx">
+      <Generator>ResXFileCodeGenerator</Generator>
+      <LastGenOutput>Resources.Designer.cs</LastGenOutput>
+    </EmbeddedResource>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="ApexCode\MethodsOne.txt" />
+    <None Include="ApexCode\MethodsTwo.txt" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
