Implemented the unit test for MethodsTwo.txt. Added annotations to the grammar. Fixed some warnings reported by StyleCop.

--- a/ApexParser/ApexParser.csproj
+++ b/ApexParser/ApexParser.csproj
@@ -50,6 +50,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="GlobalSuppressions.cs" />
     <Compile Include="Lexer\ApexLexer.cs" />
     <Compile Include="Lexer\Lexer.cs" />
     <Compile Include="Lexer\RegexMatcher.cs" />
@@ -74,7 +75,6 @@
     <None Include="App.config" />
     <None Include="packages.config" />
   </ItemGroup>
-  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
