Fixed the unit test for ClassOne. Ignored the broken tests until the parser is fixed.

--- a/ApexParserTest/ApexParserTest.csproj
+++ b/ApexParserTest/ApexParserTest.csproj
@@ -92,6 +92,11 @@
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
     </EmbeddedResource>
   </ItemGroup>
+  <ItemGroup>
+    <None Include="ApexTestClasses\ClassOne.cls" />
+    <None Include="ApexTestClasses\ClassTwo.cls" />
+    <None Include="ApexTestClasses\Demo.cls" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
