Added Roslyn-based StyleCop.Analyzers package to the project. Added ApexParser.ruleset configuration file to suppress the unwanted rules. Started the unit test fixture for the Apex code formatter. Fixed the code formatting as suggested by StyleCop. Fixed the indenting bug in the code formatter.

--- a/ApexParser/ApexParser.csproj
+++ b/ApexParser/ApexParser.csproj
@@ -23,6 +23,8 @@
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
     <TreatWarningsAsErrors>true</TreatWarningsAsErrors>
+    <CodeAnalysisRuleSet>..\ApexParser.ruleset</CodeAnalysisRuleSet>
+    <RunCodeAnalysis>false</RunCodeAnalysis>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <PlatformTarget>AnyCPU</PlatformTarget>
@@ -51,7 +53,6 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="ApexCodeFormatter\FormatApexCode.cs" />
-    <Compile Include="GlobalSuppressions.cs" />
     <Compile Include="Lexer\ApexLexer.cs" />
     <Compile Include="Lexer\Lexer.cs" />
     <Compile Include="Lexer\RegexMatcher.cs" />
@@ -76,7 +77,10 @@
     <None Include="App.config" />
     <None Include="packages.config" />
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <Analyzer Include="..\packages\StyleCop.Analyzers.1.0.2\analyzers\dotnet\cs\StyleCop.Analyzers.CodeFixes.dll" />
+    <Analyzer Include="..\packages\StyleCop.Analyzers.1.0.2\analyzers\dotnet\cs\StyleCop.Analyzers.dll" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
