--- a/ApexParserTest/ApexParserTest.csproj
+++ b/ApexParserTest/ApexParserTest.csproj
@@ -56,6 +56,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ApexCodeFormatter\FormatterTests.cs" />
     <Compile Include="Parser\ApexResourceTests.cs" />
     <Compile Include="Lexer\LexerTest.cs" />
     <Compile Include="Lexer\LexerTestData.cs" />
@@ -96,6 +97,9 @@
     <None Include="ApexTestClasses\ClassOne.cls" />
     <None Include="ApexTestClasses\ClassTwo.cls" />
     <None Include="ApexTestClasses\Demo.cls" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="ApexTestClasses\ClassOne_Formatted.cls" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
