--- a/appveyor.yml
+++ b/appveyor.yml
@@ -1,7 +1,7 @@
 ﻿version: 1.0.{build}
 image: Visual Studio 2017
 init:
-- cmd: git config --global core.autocrlf false
+- cmd: git config --global core.autocrlf true
 before_build:
 - cmd: nuget restore
 build:
