--- a/ApexParserTest/ApexParserTest.csproj
+++ b/ApexParserTest/ApexParserTest.csproj
@@ -101,6 +101,9 @@
   <ItemGroup>
     <None Include="ApexTestClasses\ClassOne_Formatted.cls" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="ApexTestClasses\ClassTwo_Formatted.cls" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
