Improved the token-based formatter implementation.

--- a/ApexParserTest/ApexParserTest.csproj
+++ b/ApexParserTest/ApexParserTest.csproj
@@ -110,6 +110,12 @@
   <ItemGroup>
     <None Include="ApexTestClasses\ClassWithComments_Formatted.cls" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="ApexTestClasses\FormatDemo.cls" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="ApexTestClasses\FormatDemo_Formatted.cls" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
