Added the initial sketch for the properties.

--- a/ApexParser/ApexParser.csproj
+++ b/ApexParser/ApexParser.csproj
@@ -66,6 +66,7 @@
     <Compile Include="MetaClass\ConstructorSyntax.cs" />
     <Compile Include="MetaClass\ParameterSyntax.cs" />
     <Compile Include="MetaClass\MethodSyntax.cs" />
+    <Compile Include="MetaClass\PropertySyntax.cs" />
     <Compile Include="MetaClass\SyntaxType.cs" />
     <Compile Include="MetaClass\TypeSyntax.cs" />
     <Compile Include="Parser\ApexGrammar.cs" />
